examples/python-web-app/deployment-for-Secrets.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sample-python-app
  labels:
    app: sample-python-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: sample-python-app
  template:
    metadata:
      labels:
        app: sample-python-app
    spec:
      containers:
      - name: python-app
        image: python-demo-app:v1
        volumeMounts:
          - name: python-secret-volume
            mountPath: /opt
        ports:
        - containerPort: 8000
      volumes:
        - name: python-secret-volume
          secret:
            secretName: python-app-secret
