examples/python-web-app/deployment-for-configMap.yml
# Using ConfigMaps as files
# https://kubernetes.io/docs/concepts/configuration/configmap/#using-configmaps-as-files-from-a-pod
apiVersion: apps/v1      
kind: Deployment
metadata:
  name: sample-python-app
  labels:
    app: sample-python-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: sample-python-app
  template:
    metadata:
      labels:
        app: sample-python-app
    spec:
      containers:
      - name: python-app
        image: python-demo-app:v1
        volumeMounts:
          - name: python-volume
            mountPath: /opt
        ports:
        - containerPort: 8000
      volumes:
        - name: python-volume
          configMap:
            name: python-app-cm

#Using ConfigMaps as environment variable.

apiVersion: apps/v1      
kind: Deployment
metadata:
  name: sample-python-app
  labels:
    app: sample-python-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: sample-python-app
  template:
    metadata:
      labels:
        app: sample-python-app
    spec:
      containers:
      - name: python-app
        image: python-demo-app:v1
        ports:
        - containerPort: 8000
